--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
 buildscript {
     repositories {
         mavenCentral()
-        mavenLocal()
-        maven { url 'https://github.com/steffenschaefer/gwt-gradle-plugin/raw/maven-repo/' }
+        jcenter()
     }
     dependencies {
-        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.4'
-        classpath 'com.android.tools.build:gradle:0.10+'
-        classpath 'com.github.jtakakura:gradle-robovm-plugin:0.0.10'
+        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.5'
+        classpath 'com.android.tools.build:gradle:0.13+'
+        classpath 'org.robovm:robovm-gradle-plugin:1.0.0-alpha-04'
     }
 }
 
@@ -18,12 +17,11 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'Sample'
-        gdxVersion = '1.3.1'
-        roboVMVersion = '0.0.14'
+        gdxVersion = '1.4.1'
+        roboVMVersion = '1.0.0-alpha-04'
     }
 
     repositories {
-        mavenLocal()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
