--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     dependencies {
         classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.5'
         classpath 'com.android.tools.build:gradle:0.13+'
-        classpath 'org.robovm:robovm-gradle-plugin:1.0.0-alpha-04'
+        classpath 'org.robovm:robovm-gradle-plugin:1.0.0-beta-01'
     }
 }
 
@@ -18,7 +18,10 @@ allprojects {
     ext {
         appName = 'Sample'
         gdxVersion = '1.4.1'
-        roboVMVersion = '1.0.0-alpha-04'
+        roboVMVersion = '1.0.0-beta-01'
+        box2DLightsVersion = '1.3'
+        ashleyVersion = '1.3.1'
+        aiVersion = '1.4.0'
     }
 
     repositories {
