--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.5'
-        classpath 'com.android.tools.build:gradle:0.13+'
+        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
+        classpath 'com.android.tools.build:gradle:1.0.0'
         classpath 'org.robovm:robovm-gradle-plugin:1.0.0-beta-01'
     }
 }
@@ -17,7 +17,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'Sample'
-        gdxVersion = '1.4.1'
+        gdxVersion = '1.5.1'
         roboVMVersion = '1.0.0-beta-01'
         box2DLightsVersion = '1.3'
         ashleyVersion = '1.3.1'
